2018-10-26  Richard Larsson  <larsson@mps.mpg.de>

	* arts-2-3-1144
	
	Since there is a publication on the matter 
	(https://doi.org/10.1051/0004-6361/201833566) by Takayoshi
	Yamada etal, I should take some time to write proper fast
	tests for the NLTE stuff so that the debacle where some 
	tests are allowed to fail for months because they are in
	the slow repository doesn't repeat.
	
	I also discovered some issues with the older NLTE computations
	that should be fixed.  Note that these older NLTE computations
	have never been validated properly (i.e., numerically) against
	other code.  (There was a graphical comparison with many lines
	at one point, but we never got into the details of single line
	comparisons.)  As the saying goes, squash one bug and two new 
	will be found.  Presently, the older NLTE computations using 
	the new and the old lineshape calculators do not agree.  
	They're are off by quite large amounts in their source function
	computations (up to 150% in the test).  Also, there is another
	error with xsec_species2 that affects mutlicore simulations when
	the source is calculated (not xsec so far).  The former bug I 
	cannot figure out because the codes are doing the same things 
	and the xsec computations are off by less than a percent.  The
	latter I do not even know how to begin to debug alone.  So
	multicore is shutoff for now and at least one of the two tests
	should be updated/removed in the future so xsec_species and
	xsec_species2 agrees...
	
	* controlfiles/CMakeLists.txt: Added
	TestPopulationDensityNLTE_lineshape.arts as a fast test of 
	Taka's NLTE method.  I also made the unvalidated NLTE
	fast by reducing the number of frequencies.
	
	* controlfiles/artscomponents/lineshapes/testdata/doppler-line.xml:
	Set Einstein coefficient to low value to let the NLTE equations 
	work.
	
	* controlfiles/artscomponents/nlte/TestNLTE_*_method.xml:  New
	test targets.  These are using AddLines2 and AddLines.